growl background color changes depends of the type of the message && added some comments

--- a/crypfolio/web/faces/forgot-password.xhtml
+++ b/crypfolio/web/faces/forgot-password.xhtml
@@ -16,7 +16,7 @@
 
         <div class="forms-wrapper">
 
-            <p:growl id="growl" showDetail="false" life="15000" errorClass="error-messages" infoClass="info-messages"/>
+            <p:growl id="growl" showDetail="false" life="15000"/>
 
             <h:form id="resetPasswordForm" rendered="#{empty param['code']}">
                 <!-- the form for the use case when user is not logged and want to reset you password -->
