--- a/crypfolio/web/faces/signup.xhtml
+++ b/crypfolio/web/faces/signup.xhtml
@@ -15,7 +15,7 @@
 
         <div class="forms-wrapper">
 
-            <p:growl id="growl" showDetail="false" life="15000" errorClass="error-messages" infoClass="info-messages"/>
+            <p:growl id="growl" showDetail="false" life="15000"/>
 
             <p:outputPanel id="signUpOutputPanel">
 
