--- a/crypfolio/web/faces/user.xhtml
+++ b/crypfolio/web/faces/user.xhtml
@@ -32,7 +32,7 @@
 
     <ui:define name="content">
 
-        <p:growl id="growl" showDetail="false" sticky="true" life="10000"/>
+        <p:growl id="growl" showDetail="false" life="10000"/>
 
         <p:tabView id="mainTabView" dynamic="true" cache="true" styleClass="myTabview">
 
