--- a/crypfolio/web/faces/portfolio-add-item.xhtml
+++ b/crypfolio/web/faces/portfolio-add-item.xhtml
@@ -284,7 +284,7 @@
                                                          icon="ui-icon-check"
                                                          styleClass="ui-state-disabled"
                                                          oncomplete="PF('dlgPortfolioAddItem').hide();"
-                                                         update="mainTabView:portfolioPanel @form growl"
+                                                         update="mainTabView:portfolioPanel mainTabView:archivePanel @form growl"
                                                          resetValues="true">
                                         </p:commandButton>
 
